--- a/src/assets/css/admin.scss
+++ b/src/assets/css/admin.scss
@@ -7,4 +7,30 @@
   height: 100%;
   background: #f7f7f7;
   padding: 10px;
+  overflow: hidden;
+
+  display: flex;
+  flex-flow: column;
+}
+
+#admin .adminHeader{
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+}
+
+#admin .nav-tabs {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: auto;
+}
+
+#admin .tab-content{
+  background: #fff;
+  padding: 20px;
+  overflow: scroll;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: auto;
+  max-height: 100vmax;
 }
