--- a/src/assets/css/admin.scss
+++ b/src/assets/css/admin.scss
@@ -14,23 +14,24 @@
 }
 
 #admin .adminHeader{
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-basis: auto;
+  // flex-grow: 0;
+  // flex-shrink: 0;
+  // flex-basis: auto;
 }
 
 #admin .nav-tabs {
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-basis: auto;
+  // flex-grow: 0;
+  // flex-shrink: 0;
+  // flex-basis: auto;
 }
 
 #admin .tab-content{
   background: #fff;
   padding: 20px;
   overflow: scroll;
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: auto;
-  max-height: 100vmax;
+  flex: 1;
+  // flex-grow: 1;
+  // flex-shrink: 0;
+  // flex-basis: auto;
+  // height: 100vh;
 }
